--- a/package.json
+++ b/package.json
@@ -1,43 +1,22 @@
 {
-  "author": "kevinRodbe",
+  "name": "@rodbe/fn-utils",
+  "version": "1.11.0",
+  "description": "RBX npm Library",
+  "keywords": [
+    "typescript",
+    "front-end"
+  ],
+  "homepage": "https://github.com/rodbe-io/fn-utils",
   "bugs": {
     "url": "https://github.com/rodbe-io/fn-utils/issues"
   },
-  "description": "RBX npm Library",
-  "devDependencies": {
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
-    "@commitlint/format": "^19.8.1",
-    "@commitlint/types": "^19.8.1",
-    "@eslint/js": "^9.30.1",
-    "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/commit-analyzer": "^13.0.1",
-    "@semantic-release/git": "10.0.1",
-    "@semantic-release/npm": "12.0.2",
-    "@semantic-release/release-notes-generator": "^14.0.3",
-    "@types/node": "^24.0.10",
-    "@vitest/coverage-v8": "^3.2.4",
-    "commitizen": "^4.3.1",
-    "conventional-changelog-conventionalcommits": "9.0.0",
-    "eslint": "^9.30.1",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-package-json": "^0.43.1",
-    "eslint-plugin-prettier": "^5.5.1",
-    "husky": "^9.1.7",
-    "nano-staged": "^0.8.0",
-    "pkgroll": "^2.13.1",
-    "prettier": "^3.6.2",
-    "semantic-release": "24.2.6",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.1",
-    "vitest": "^3.2.4"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rodbe-io/fn-utils.git"
   },
-  "engines": {
-    "node": ">= 22.17.0",
-    "npm": ">= 8.11.0",
-    "pnpm": ">= 9.15.2"
-  },
-  "enginesStrict": true,
+  "license": "MIT",
+  "author": "kevinRodbe",
+  "type": "module",
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -47,34 +26,61 @@
   "files": [
     "dist"
   ],
-  "homepage": "https://github.com/rodbe-io/fn-utils",
-  "keywords": [
-    "typescript",
-    "front-end"
-  ],
-  "license": "MIT",
-  "name": "@rodbe/fn-utils",
-  "packageManager": "pnpm@9.15.2",
-  "publishConfig": {
-    "access": "public"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rodbe-io/fn-utils.git"
-  },
   "scripts": {
+    "prebuild": "pnpm run type-check",
     "build": "pkgroll",
     "commitlint": "commitlint --edit",
-    "prebuild": "pnpm run type-check",
     "prepare": "husky || true",
     "release": "semantic-release",
     "start": "pkgroll --watch",
     "test:unit": "vitest run",
     "type-check": "tsc --noEmit"
   },
-  "type": "module",
-  "version": "1.11.0",
+  "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@commitlint/format": "^19.8.1",
+    "@commitlint/types": "^19.8.1",
+    "@eslint/js": "^9.31.0",
+    "@eslint/json": "^0.13.1",
+    "@rodbe/eslint-config": "^1.2.0",
+    "@rodbe/prettier-config": "^1.5.0",
+    "@rodbe/tsconfig": "^1.1.1",
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/npm": "12.0.2",
+    "@semantic-release/release-notes-generator": "^14.0.3",
+    "@types/node": "^24.1.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "commitizen": "^4.3.1",
+    "conventional-changelog-conventionalcommits": "^9.1.0",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-package-json": "^0.45.1",
+    "eslint-plugin-prettier": "^5.5.3",
+    "husky": "^9.1.7",
+    "nano-staged": "^0.8.0",
+    "pkgroll": "^2.14.3",
+    "prettier": "^3.6.2",
+    "prettier-plugin-curly": "^0.3.2",
+    "prettier-plugin-packagejson": "^2.5.19",
+    "semantic-release": "^24.2.7",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.38.0",
+    "vitest": "^3.2.4"
+  },
+  "packageManager": "pnpm@9.15.2",
+  "engines": {
+    "node": ">= 22.17.0",
+    "npm": ">= 8.11.0",
+    "pnpm": ">= 9.15.2"
+  },
   "volta": {
     "node": "22.17.0"
-  }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "enginesStrict": true
 }
