--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,11 +7,20 @@ on:
       - alpha
       - pre
 
+permissions:
+  contents: write
+  id-token: write
+  issues: write
+  packages: write
+  pull-requests: write
+
+env:
+  HUSKY: 0
+
 jobs:
-  call-shared-workflow:
+  release:
     uses: rodbe-io/shared-workflows/.github/workflows/release.yaml@main
     with:
       enable-test-unit: true
     secrets:
-      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
