--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "10.0.1",
-    "@semantic-release/npm": "12.0.2",
-    "@semantic-release/release-notes-generator": "^14.0.3",
+    "@semantic-release/npm": "13.1.3",
+    "@semantic-release/release-notes-generator": "^14.1.0",
     "@types/node": "^24.1.0",
     "@vitest/coverage-v8": "^3.2.4",
     "commitizen": "^4.3.1",
@@ -65,19 +65,20 @@
     "prettier": "^3.6.2",
     "prettier-plugin-curly": "^0.3.2",
     "prettier-plugin-packagejson": "^2.5.19",
-    "semantic-release": "^24.2.7",
+    "semantic-release": "^25.0.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vitest": "^3.2.4"
   },
-  "packageManager": "pnpm@9.15.2",
+  "packageManager": "pnpm@10.5.2",
   "engines": {
-    "node": ">= 22.17.0",
-    "npm": ">= 8.11.0",
-    "pnpm": ">= 9.15.2"
+    "node": ">= 24.10.0",
+    "npm": ">= 10.9.2",
+    "pnpm": ">= 10.5.2"
   },
   "volta": {
-    "node": "22.17.0"
+    "node": "25.2.1",
+    "pnpm": "10.5.2"
   },
   "publishConfig": {
     "access": "public"
